# c-proj-on-manjaro

./: CMakeLists.txt
